# simple-physics-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SDLExperiment.sln  build.sh
CMakeModules/: FindSDL2.cmake
Emscripten/: build_emscripten.bat  build_emscripten.sh  run_emscripten.bat
SDLExperiment/: Ball.h  Cube.h  CubeGeometryFactory.h  Drawable.h  Frustum.h  IntersectionTests.h  Plane.h  Quad.h  RenderConstants.h  SDLExperiment.vcxproj  SDLExperiment.vcxproj.filters  SampleShader.h  SceneInitialization.h  SceneManager.h  SceneRenderer.h  SceneShader.h  SceneSimulator.h  Shader.h  ShaderConstants.h  ShaderFactory.h  ShadowMapShader.h  SphereMesh.h  Triangle.h  build_emscripten.bat  main.cpp  run_emscripten.bat  sdl2_fog_exp.c
include/: Frustum.h  IntersectionTests.h  Plane.h  QuadMesh.h  RenderConstants.h  SceneInitialization.h  SceneManager.h  SceneRenderer.h  SceneSimulator.h  Shader.h  ShaderFactory.h  Sphere.h  SphereMesh.h
src/: Frustum.cpp  Frustum.h  IntersectionTests.h  Plane.h  QuadMesh.cpp  QuadMesh.h  SceneInitialization.cpp  SceneInitialization.h  SceneManager.cpp  SceneManager.h  SceneRenderer.cpp  SceneRenderer.h  SceneShader.h  SceneSimulator.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  ShadowMapShader.h  Sphere.cpp  Sphere.h  SphereMesh.cpp  SphereMesh.h  main.cpp
